--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,9 @@
     "axios": "^1.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.15.0"
+    "react-router-dom": "^6.15.0",
+    "react-use-websocket": "^4.4.0",
+    "websocket": "^1.0.34"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
